Add close to help view

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -33,6 +33,8 @@
 			"<Down>": "Down",
 			"<Left>": "Left",
 			"<Right>": "Right",
+			"<q>": "Close",
+			"<Esc>": "Close",
 		},
 		"list": {
 			"<k>": "Up",
