Add missing quotemarks

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -111,28 +111,30 @@
 			"<Enter>": "ViewSelected",
 
 			"<i>": { "Add": "Front" },
-			"<Shift-i>": { Add: "Front" },
-			"<a>": { Add: "Next" },
-			"<Shift-a>": { Add: "Last" },
+			"<Shift-i>": { "Add": "Front" },
+			"<a>": { "Add": "Next" },
+			"<Shift-a>": { "Add": "Last" },
 
 			"<r><i>": { "RandomAdd": "Front" },
-			"<r><Shift-i>": { RandomAdd: "Front" },
-			"<r><a>": { RandomAdd: "Next" },
-			"<r><Shift-a>": { RandomAdd: "Last" },
+			"<r><Shift-i>": { "RandomAdd": "Front" },
+			"<r><a>": { "RandomAdd": "Next" },
+			"<r><Shift-a>": { "RandomAdd": "Last" },
 		},
 		"playlistqueue": {
 			"<Shift-r>": "Refresh",
 			"<Shift-f>": "ToggleStar",
 
+			"<Enter>": { "Add": "Front" },
+
 			"<i>": { "Add": "Front" },
-			"<Shift-i>": { Add: "Front" },
-			"<a>": { Add: "Next" },
-			"<Shift-a>": { Add: "Last" },
+			"<Shift-i>": { "Add": "Front" },
+			"<a>": { "Add": "Next" },
+			"<Shift-a>": { "Add": "Last" },
 
 			"<r><i>": { "RandomAdd": "Front" },
-			"<r><Shift-i>": { RandomAdd: "Front" },
-			"<r><a>": { RandomAdd: "Next" },
-			"<r><Shift-a>": { RandomAdd: "Last" },
+			"<r><Shift-i>": { "RandomAdd": "Front" },
+			"<r><a>": { "RandomAdd": "Next" },
+			"<r><Shift-a>": { "RandomAdd": "Last" },
 		},
 	},
     // Use legacy authentication that sends the password instead of token and salt
