Add temporary search function

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -147,6 +147,8 @@
 
 			"<f>": "Filter",
 			"<Ctrl-f>": "Unfilter",
+
+			"</>": "Search",
 		},
 	},
     // Use legacy authentication that sends the password instead of token and salt
