--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ build = "build.rs"
 [dependencies]
 alsa-sys = "0.3.1"
 better-panic = "0.3.0"
+bytes = "1.11.0"
 clap = { version = "4.5.20", features = [
     "derive",
     "cargo",
