--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ description = "Ampterm"
 authors = ["MangoCubes <10383115+MangoCubes@users.noreply.github.com>"]
 build = "build.rs"
 
+[profile.release]
+strip = "symbols"
+lto = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -34,6 +37,7 @@ json5 = "0.4.1"
 lazy_static = "1.5.0"
 libc = "0.2.161"
 md5 = "0.8.0"
+mpris-server = "0.9.0"
 pretty_assertions = "1.4.1"
 rand = "0.9.2"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
