--- a/.config/config.json5
+++ b/.config/config.json5
@@ -150,6 +150,14 @@
 
 			"<Shift-i>": "ViewInfo",
 		},
+		"popup": {
+			"<Up>": "Up",
+			"<Down>": "Down",
+
+			"<Shift-g>": "Bottom",
+			"<g><g>": "Top",
+			"<q>": "Close",
+		}
 	},
     // Use legacy authentication that sends the password instead of token and salt
     // This may be necessary if you are using servers like Ampache, which does not support token-based authentication yet
