--- a/.config/config.json5
+++ b/.config/config.json5
@@ -103,6 +103,8 @@
 			"<z><z>": "FocusPlaying",
 
 			"<r>": "Randomise",
+
+			"<Shift-i>": "ViewInfo"
 		},
 		// Keybinds for the lyrics page (The popup you get you press the key bound to OpenLyrics in nowplaying)
 		"lyrics": {
