--- a/.config/config.json5
+++ b/.config/config.json5
@@ -104,7 +104,10 @@
 
 			"<r>": "Randomise",
 
-			"<Shift-i>": "ViewInfo"
+			"<Shift-i>": "ViewInfo",
+
+			"<\">": "AddToPlaylist",
+
 		},
 		// Keybinds for the lyrics page (The popup you get you press the key bound to OpenLyrics in nowplaying)
 		"lyrics": {
@@ -151,6 +154,7 @@
 			"<Ctrl-l>": "ClearSearch",
 
 			"<Shift-i>": "ViewInfo",
+
 		},
 		"popup": {
 			"<Up>": "Up",
@@ -162,6 +166,18 @@
 			"<q>": "Close",
 			"<Esc>": "Close",
 			"<Shift-i>": "Close",
+		},
+		"select_playlist_popup": {
+			"<Up>": "Up",
+			"<Down>": "Down",
+
+			"<Shift-g>": "Bottom",
+			"<g><g>": "Top",
+
+			"<q>": "Cancel",
+			"<Esc>": "Cancel",
+
+			"<Enter>": "Confirm"
 		}
 	},
     // Use legacy authentication that sends the password instead of token and salt
