--- a/.config/config.json5
+++ b/.config/config.json5
@@ -180,7 +180,18 @@
 			"<q>": "Cancel",
 			"<Esc>": "Cancel",
 
-			"<Enter>": "Confirm"
+			"<Enter>": "Confirm",
+			// Press Shift-I whilst the cursor is on top of a playlist to view its ID
+			// Put the ID in the `id` section to quickly select a playlist
+			// `name` part is not used to specify a playlist; It can be filled with anything, and can be different from the actual name.
+			// As long as the ID is correct, name can be anything.
+			"<t>": {
+				"SelectID": {
+					"id": "800000018",
+					"name": "Test"
+				}
+			}
+
 		}
 	},
     // Use legacy authentication that sends the password instead of token and salt
