--- a/.config/config.json5
+++ b/.config/config.json5
@@ -70,6 +70,9 @@
 
 			"<n>": "SearchNext",
 			"<Shift-n>": "SearchPrev",
+
+			"<PageUp>": "PageUp",
+			"<PageDown>": "PageDown",
 		},
 		// Keybinds for visual mode of the list
 		"list_visual": {
