Add AddToPlaylist for PlaylistQueue

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -160,7 +160,7 @@
 			"<Ctrl-l>": "ClearSearch",
 
 			"<Shift-i>": "ViewInfo",
-
+			"<\">": "AddToPlaylist",
 		},
 		"popup": {
 			"<Up>": "Up",
